# tutrtalk-local-voice-ai

./: .env.bak  .env.example  Dockerfile  README.md  compose-up.ps1  compose-up.sh  delay_agent.sh  docker-compose.gpu.yml  docker-compose.macos.yml  docker-compose.yml  fix_agent.py  fix_inference.py  pyproject.toml
agent/: .env  myagent.py  requirements.txt
frontend/: .env.local  Dockerfile
frontend/app/api/connection-details/: route.ts
inference/nemotron/: Dockerfile  README.md  requirements.txt
inference/ollama/: Dockerfile  entrypoint.sh
inference/whisper/: Dockerfile
livekit_agent/: .env.example  Dockerfile  pyproject.toml
livekit_agent/src/: agent.py
local_voice_ai/: __main__.py  agent.py  agent.py.bak  api.py  config.py  supervisor.py
local_voice_ai/services/whisper/: server.py
tests/: conftest.py  test_api.py  test_config.py  test_supervisor.py
